--- a/nvme_rhel_83.adoc
+++ b/nvme_rhel_83.adoc
@@ -4,7 +4,6 @@ permalink: nvme_rhel_83.html
 keywords: nvme, linux, rhel, red hat, enterprise
 summary: How to Configure NVMe/FC Host for RHEL 8.3 with ONTAP
 ---
-
 = Configure RHEL 8.3 for NVMe-oF with ONTAP storage
 :hardbreaks:
 :toclevels: 1
@@ -20,38 +19,18 @@ include::_include/nvme/nvme-introduction.adoc[]
 You can use the following support and features with the NVMe-oF host configuration for Red Hat Enterprise Linux (RHEL) 8.3. You should also review the known limitations before starting the configuration process.
 
 * Support available:
-
-Beginning with ONTAP 9.6, NVMe/FC is supported for Red Hat Enterprise Linux (RHEL) 8.3. The RHEL 8.3 host runs both NVMe and SCSI traffic through the same FC initiator adapter ports. See the link:https://hwu.netapp.com/Home/Index[Hardware Universe^] for a list of supported FC adapters and controllers.
-
-See the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^] for the current list of supported configurations.
-
-== Features
-
-There are no new features in this release.
-
-== Known limitations
-
-* For RHEL 8.3, in-kernel NVMe multipath is disabled by default. You can enable it manually. 
-
-* SAN booting using the NVMe-oF protocol is currently not supported.
-
-== Enable SAN booting
-
-You can configure your host to use SAN booting to simplify deployment and improve scalability.
-
-.Before you begin
-Use the link:https://mysupport.netapp.com/matrix/#welcome[Interoperability Matrix Tool^] to verify that your Linux OS, host bus adapter (HBA), HBA firmware, HBA boot BIOS, and ONTAP version support SAN booting.
-
-.Steps
-
-. Create a SAN boot namespace and map it to the host.
+** Beginning with ONTAP 9.6, NVMe/FC is supported for Red Hat Enterprise Linux (RHEL) 8.3. The RHEL 8.3 host runs both NVMe and SCSI traffic through the same FC initiator adapter ports. See the link:https://hwu.netapp.com/Home/Index[Hardware Universe^] for a list of supported FC adapters and controllers.
 +
-See https://docs.netapp.com/us-en/ontap/san-admin/create-nvme-namespace-subsystem-task.html[Provision NVMe storage^].
-. Enable SAN booting in the server BIOS for the ports to which the SAN boot LUN is mapped.
-+
-For information on how to enable the HBA BIOS, see your vendor-specific documentation.
+For additional details on supported configurations, see the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^].
+* Features available:
+** There are no new features in this release.
+* Known limitations: 
+** In-kernel NVMe multipath is disabled by default on NVMe-oF hosts in RHEL 8.3, so you must enable it manually.
+** SAN booting using the NVMe-oF protocol is not currently supported.
 
-. Verify that the configuration was successful by rebooting the host and verifying that the OS is up and running.
+== Step 1: Optionally, enable SAN booting
+
+include::_include/nvme/enable-san-booting.adoc[]
 
 == Enable NVMe/FC on RHEL 8.3
 
@@ -137,6 +116,30 @@ defaults {
 ----
 Restart the multipathd daemon by running a `systemctl restart multipathd`.
 ====
+
+== Configure the Broadcom FC adapter for NVMe/FC
+
+You can use the following procedure to configure a Broadcom FC adapter.
+
+
+include::_include/nvme/reuse_configuring_broadcom_for_rhel_nvme_part1.adoc[]
+
+. Verify that you are using the recommended Broadcom lpfc firmware as well as the inbox driver:
++
+----
+# cat /sys/class/scsi_host/host*/fwrev
+12.8.340.8, sli-4:2:c
+12.8.340.8, sli-4:2:c
+----
++
+----
+# cat /sys/module/lpfc/version
+0:12.8.0.1
+----
+
+== Step 4: Optionally, enable 1MB I/O 
+
+include::_include/nvme/reuse_nvme_enabling_broadcom_1mb_size.adoc[]
 
 == Validate NVMe/FC
 
@@ -246,24 +249,8 @@ Device               Vserver            Namespace Path                          
 --
 ====
 
-== Configure the Broadcom FC adapter for NVMe/FC
+== Step 6: Review the known issues
 
-You can use the following procedure to configure a Broadcom FC adapter.
-
-
-include::_include/nvme/reuse_configuring_broadcom_for_rhel_nvme_part1.adoc[]
-
-. Verify that you are using the recommended Broadcom lpfc firmware as well as the inbox driver:
-+
-----
-# cat /sys/class/scsi_host/host*/fwrev
-12.8.340.8, sli-4:2:c
-12.8.340.8, sli-4:2:c
-----
-+
-----
-# cat /sys/module/lpfc/version
-0:12.8.0.1
-----
+There are no known issues.
 
 // JIRA-1289 20-Sep-2023
