--- a/nvme_rhel_84.adoc
+++ b/nvme_rhel_84.adoc
@@ -4,7 +4,6 @@ permalink: nvme_rhel_84.html
 keywords: nvme, linux, rhel, red hat, enterprise
 summary: How to Configure NVMe-oF Host for RHEL 8.4 with ONTAP
 ---
-
 = Configure RHEL 8.4 for NVMe-oF with ONTAP storage
 :hardbreaks:
 :toclevels: 1
@@ -20,38 +19,17 @@ include::_include/nvme/nvme-introduction.adoc[]
 You can use the following support and features with the NVMe-oF host configuration for Red Hat Enterprise Linux (RHEL) 8.4. You should also review the known limitations before starting the configuration process.
 
 * Support available:
+** There is no new support available in this release.
+* Features available:
+** There are no new features in this release.
+* Known limitations: 
+** In-kernel NVMe multipath is disabled by default on NVMe-oF hosts in RHEL 8.4, so you must enable it manually.
+** On RHEL 8.4 hosts, NVMe/TCP is a technology preview feature due to known issues.
+** SAN booting using the NVMe-oF protocol is not currently supported.
 
-NVMe over Fabrics or NVMe-oF (including NVMe/FC and other transports) is supported with Red Hat Enterprise Linux (RHEL) 8.4 with ANA (Asymmetric Namespace Access). ANA is the asymmetric logical unit access (ALUA) equivalent in the NVMe-oF environment, and is currently implemented with in-kernel NVMe Multipath. You can enable NVMe-oF with in-kernel NVMe Multipath using ANA on RHEL 8.4 and ONTAP as the target.
+== Step 1: Optionally, enable SAN booting
 
-== Features
-
-There are no new features in this release.
-
-== Known limitations
-
-* For RHEL 8.4, in-kernel NVMe multipath is disabled by default. Therefore, you need to enable it manually.
-
-* NVMe/TCP on RHEL 8.4 remains a Technology Preview feature due to open issues. Refer to the https://access.redhat.com/documentation/en-us/red_hat_enterprise_linux/8/html-single/8.4_release_notes/index#technology-preview_file-systems-and-storage[RHEL 8.4 Release Notes^] for details.
-
-* SAN booting using the NVMe-oF protocol is currently not supported.
-
-== Enable SAN booting
-
-You can configure your host to use SAN booting to simplify deployment and improve scalability.
-
-.Before you begin
-Use the link:https://mysupport.netapp.com/matrix/#welcome[Interoperability Matrix Tool^] to verify that your Linux OS, host bus adapter (HBA), HBA firmware, HBA boot BIOS, and ONTAP version support SAN booting.
-
-.Steps
-
-. Create a SAN boot namespace and map it to the host.
-+
-See https://docs.netapp.com/us-en/ontap/san-admin/create-nvme-namespace-subsystem-task.html[Provision NVMe storage^].
-. Enable SAN booting in the server BIOS for the ports to which the SAN boot LUN is mapped.
-+
-For information on how to enable the HBA BIOS, see your vendor-specific documentation.
-
-. Verify that the configuration was successful by rebooting the host and verifying that the OS is up and running.
+include::_include/nvme/enable-san-booting.adoc[]
 
 == Enable in-kernel NVMe multipath
 
@@ -219,10 +197,9 @@ QLE2742 FW:v9.06.02 DVR:v10.02.00.104-k
 --
 ====
 
-=== Enable 1MB I/O (Optional)
+== Step 4: Optionally, enable 1MB I/O 
 
 include::_include/nvme/reuse_nvme_enabling_broadcom_1mb_size.adoc[]
-
 
 == Configure NVMe/TCP
 
@@ -433,7 +410,7 @@ NSID  UUID                                   Size
 }
 ----
 
-== Known issues
+== Step 7: Review the known issues
 
 There are no known issues.
 
