--- a/nvme_sles15_sp7.adoc
+++ b/nvme_sles15_sp7.adoc
@@ -23,7 +23,7 @@ You can use the following support and features with the NVMe-oF host configurati
 ** Support for NVMe over TCP (NVMe/TCP) in addition to NVMe over Fibre Channel (NVMe/FC). The NetApp plug-in in the native `nvme-cli` package displays ONTAP details for both NVMe/FC and NVMe/TCP namespaces.
 ** Running both NVMe and SCSI traffic on the same host. For example, you can configure dm-multipath for SCSI mpath devices for SCSI LUNs and use NVMe multipath to configure NVMe-oF namespace devices on the host.
 ** Support for SAN booting using the NVMe/FC protocol.
-** Beginning with ONTAP 9.12.1, support for secure in-band authentication is introduced for NVMe/TCP and NVMe/FC. You can use secure in-band authentication for NVMe/TCP with SLES15 SP7.
+** Beginning with ONTAP 9.12.1, support for secure in-band authentication is introduced for NVMe/TCP and NVMe/FC. You can use secure in-band authentication for NVMe/TCP and NVMe/FC with SLES15 SP7.
 ** Support for persistent discovery controllers (PDCs) using a unique discovery NQN.
 ** TLS 1.3 encryption support for NVMe/TCP. 
 ** NetApp `sanlun` host utility support isn't available for NVMe-oF on a SLES15 SP7 host. Instead, you can rely on the NetApp plug-in included in the native `nvme-cli` package for all NVMe-oF transports.
