--- a/hu_ubuntu_2004.adoc
+++ b/hu_ubuntu_2004.adoc
@@ -2,9 +2,9 @@
 sidebar: sidebar
 permalink: hu_ubuntu_2004.html
 keywords: host utilities, red hat, rhel, linux, 20.04, netapp, ontap, ubuntu 
-summary: Describes how to use Ubuntu 20.04 with ONTAP
+summary: Configure Ubuntu 20.04 for multipathing and with specific parameters and settings for operation with ONTAP storage
 ---
-= Use Ubuntu 20.04 with ONTAP
+= Configure Ubuntu 20.04 for FCP and iSCSI with ONTAP storage
 :toc: macro
 :hardbreaks:
 :toclevels: 1
@@ -14,109 +14,25 @@ summary: Describes how to use Ubuntu 20.04 with ONTAP
 :imagesdir: ./media/
 
 [.lead]
-You can use the ONTAP SAN host configuration settings to configure Ubuntu 20.04 with ONTAP as the target. 
+Configure Ubuntu 20.04 for multipathing and with specific parameters and settings for operation with ONTAP storage. 
 
-[NOTE]
-The NetApp Linux Host Utilities software package is not available for Ubuntu 20.04 OS.
+include::_include/hu/linux-introduction-note-ubuntu.adoc[]
 
-== SAN booting
+include::_include/hu/linux-enable-san-boot.adoc[]
 
-.Before you begin
-If you decide to use SAN booting, it must be supported by your configuration. You can use the link:https://imt.netapp.com/matrix/#welcome[Interoperability Matrix Tool^] to verify that your OS, HBA, HBA firmware and the HBA boot BIOS, and ONTAP version are supported.
+== Step 2: Confirm the multipath configuration for your host
 
-include::_include/hu/reuse_hu_san_booting_steps.adoc[]
+You can use multipathing with Ubuntu 20.04 to manage ONTAP LUNs.
 
-== Multipathing
+include::_include/hu/linux-ubuntu-multipathing.adoc[]
 
-For Ubuntu 20.04, the `/etc/multipath.conf` file must exist, but you do not need to make specific changes to the file. Ubuntu 20.04 is compiled with all the settings required to recognize and correctly manage ONTAP LUNs.
+include::_include/hu/exclude-device-ubuntu.adoc[]
 
-include::_include/hu/reuse_hu_multipathing.adoc[]
+include::_include/hu/linux-customize-parameters-ubuntu.adoc[]
 
-include::_include/hu/reuse_hu_asa_configuration.adoc[]
+== Step 5: Review the known issues
 
-----
-# multipath -ll
-3600a098038314559533f524d6c652f62 dm-24 NETAPP,LUN C-Mode
-size=10G features='3 queue_if_no_path pg_init_retries 50' hwhandler='1 alua' wp=rw
-`-+- policy='service-time 0' prio=50 status=active
-  |- 11:0:1:13 sdm  8:192  active ready running
-  |- 11:0:3:13 sdah 66:16  active ready running
-  |- 12:0:1:13 sdbc 67:96  active ready running
-  `- 12:0:3:13 sdbx 68:176 active ready running
-----
+There are no known issues.
 
-include::_include/hu/reuse_hu_asa_configuration_note.adoc[]
-
-include::_include/hu/reuse_hu_non_asa_configuration.adoc[]
-
-----
-# multipath -ll
-3600a098038314837352453694b542f4a dm-0 NETAPP,LUN C-Mode
-size=160G features='3 queue_if_no_path pg_init_retries 50' hwhandler='1 alua' wp=rw
-|-+- policy='service-time 0' prio=50 status=active
-| |- 14:0:3:0 sdbk 67:224 active ready running
-| `- 15:0:2:0 sdbl 67:240 active ready running
-`-+- policy='service-time 0' prio=10 status=enabled
-  |- 14:0:0:0 sda  8:0    active ready running
-  `- 15:0:1:0 sdv  65:80  active ready running
-----
-
-include::_include/hu/reuse_hu_asa_configuration_note.adoc[]
-
-== Recommended settings
-
-The Ubuntu 20.04 OS is compiled to recognize ONTAP LUNs and automatically set all configuration parameters correctly for both ASA and non-ASA configurations. You can further optimize performance for your host configuration with the following recommended settings.
-
-include::_include/hu/reuse-hu-systemctl-multipathd.adoc[]
-
-[cols=2*,options="header"]
-|===
-| Parameter
-| Setting
-| detect_prio | yes
-| dev_loss_tmo | "infinity"
-| failback | immediate
-| fast_io_fail_tmo | 5
-| features | "2 pg_init_retries 50"
-| flush_on_last_del | "yes"
-| hardware_handler | "0"
-| no_path_retry | queue
-| path_checker | "tur"
-| path_grouping_policy | "group_by_prio"
-| path_selector | "service-time 0"
-| polling_interval | 5
-| prio | "ontap"
-| product | LUN.*
-| retain_attached_hw_handler | yes
-| rr_weight | "uniform"
-| user_friendly_names | no
-| vendor | NETAPP
-|===
-
-.Example
-
-The following example shows how to correct an overridden default. In this case, the `multipath.conf` file defines values for `path_checker` and `no_path_retry` that are not compatible with ONTAP LUNs. If they cannot be removed because other SAN arrays are still attached to the host, these parameters can be corrected specifically for ONTAP LUNs with a device stanza.
-
-----
-defaults {
-   path_checker      readsector0
-   no_path_retry     fail
-}
-
-devices {
-   device {
-      vendor         "NETAPP"
-      product         "LUN"
-      no_path_retry    queue
-      path_checker     tur
-   }
-}
-----
-
-include::_include/hu/reuse_hu_kvm_configuration.adoc[]
-
-== Known issues
-
-There are no known issues for the Ubuntu 20.04 with ONTAP release.
-
+// 2025 JUL-15, ONTAPDOC-3128
 // 2024 AUG 13, ONTAPDOC-2294
