--- a/nvme-rockylinux-91.adoc
+++ b/nvme-rockylinux-91.adoc
@@ -62,10 +62,10 @@ include::_include/nvme/nvme-enable-1mb-io.adoc[]
 include::_include/nvme/nvme-configure-nvme-tcp.adoc[]
 
 == Step 6: Validate NVMe-oF
-include::_include/nvme/nvme-validate-nvme-of.adoc[]
+include::_include/nvme/nvme-validate-nvme-of-rocky-linux.adoc[]
 
 == Step 7: Review the known issues
-The NVMe-oF host configuration for Rocky Linux 9.1 with ONTAP storage has the following known issue:
+The NVMe-oF host configuration for Rocky Linux 9.1 with ONTAP storage storage has the following known issue:
 
 [cols="20,40,40",options="header"]
 |===
