--- a/nvme-proxmox-84.adoc
+++ b/nvme-proxmox-84.adoc
@@ -21,6 +21,7 @@ You can use the following support and features with the NVMe-oF host configurati
 * Support available:
 ** Support for NVMe over TCP (NVMe/TCP) in addition to NVMe over Fibre Channel (NVMe/FC). The NetApp plug-in in the native `nvme-cli` package displays ONTAP details for both NVMe/FC and NVMe/TCP namespaces.
 ** Running both NVMe and SCSI traffic on the same host. For example, you can configure dm-multipath for SCSI mpath devices on SCSI LUNs and use NVMe multipath to configure NVMe-oF namespace devices on the host.
+** Beginning with ONTAP 9.12.1, support for secure in-band authentication is introduced for NVMe/TCP. You can use secure in-band authentication for NVMe/TCP with Proxmox 8.4.
 
 +
 For additional details on supported configurations, see the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^].
@@ -52,257 +53,11 @@ The following example shows a Proxmox kernel version:
 6.12.0-55.9.1.el10_0.x86_64
 ----
 
-. Install the `nvme-cli` package:
-+
-[source,cli]
-----
-rpm -qa|grep nvme-cli
-----
-+
-The following example shows an `nvme-cli` package version:
-+
-----
-nvme-cli-2.11-5.el10.x86_64
-----
-
-. Install the `libnvme` package:
-+
-[source,cli]
-----
-rpm -qa|grep libnvme
-----
-+
-The following example shows an `libnvme` package version:
-+
-----
-libnvme-1.11.1-1.el10.x86_64
-----
-
-. On the host, check the hostnqn string at `/etc/nvme/hostnqn`:
-+
-[source,cli]
-----
-cat /etc/nvme/hostnqn
-----
-+
-The following example shows an `hostnqn` version:
-+
-----
-nqn.2014-08.org.nvmexpress:uuid:4c4c4544-0056-5410-8048-b9c04f425633
-----
-
-. Verify that the `hostnqn` string matches the `hostnqn` string for the corresponding subsystem on the ONTAP array:
-+
-[source,cli]
-----
-::> vserver nvme subsystem host show -vserver vs_nvme_194_proxmox84
-----
-+
-.Show example
-[%collapsible]
-====
-----
-Vserver Subsystem Priority  Host NQN
-------- --------- --------  ------------------------------------------------
-vs_ nvme_194_proxmox84
-        nvme4
-                  regular   nqn.2014-08.org.nvmexpress:uuid:4c4c4544-0056-5410-8048- c7c04f425633
-        nvme_1
-                  regular   nqn.2014-08.org.nvmexpress:uuid:4c4c4544-0056-5410-8048- c7c04f425633
-        nvme_2
-                  regular   nqn.2014-08.org.nvmexpress:uuid:4c4c4544-0056-5410-8048- c7c04f425633
-        nvme_3
-                  regular   nqn.2014-08.org.nvmexpress:uuid:4c4c4544-0056-5410-8048- c7c04f425633
-4 entries were displayed.
-----
-====
-+
-[NOTE]
-If the `hostnqn` strings don't match, use the `vserver modify` command to update the `hostnqn` string on your corresponding ONTAP array subsystem to match the `hostnqn` string from `/etc/nvme/hostnqn` on the host.
+include::_include/nvme/validate-software-version10-rockylinux-proxmox.adoc[]
 
 == Step 3: Configure NVMe/FC
 
-You can configure NVMe/FC with Broadcom/Emulex FC or Marvell/Qlogic FC adapters. For NVMe/FC configured with a Broadcom adapter, you can enable I/O requests of size 1MB.
-
-[role="tabbed-block"]
-=====
-.Broadcom/Emulex
---
-
-Configure NVMe/FC for a Broadcom/Emulex adapter.
-
-.Steps
-
-. Verify that you are using the supported adapter model: 
-
-.. Display the model names:
-+
-[source,cli]
-----
-cat /sys/class/scsi_host/host*/modelname
-----
-+
-You should see the following output:
-+
-----
-LPe36002-M64 
-LPe36002-M64
-----
-
-.. Display the model descriptions:
-+
-[source,cli]
-----
-cat /sys/class/scsi_host/host*/modeldesc
-----
-+
-You should see an output similar to the following example:
-+
-----
-Emulex LightPulse LPe36002-M64 2-Port 64Gb Fibre Channel Adapter 
-Emulex LightPulse LPe36002-M64 2-Port 64Gb Fibre Channel Adapter
-----
-
-. Verify that you are using the recommended Broadcom `lpfc` firmware and inbox driver: 
-
-.. Display the firmware version:
-+
-[source,cli]
-----
-cat /sys/class/scsi_host/host*/fwrev 
-----
-+
-The following example shows firmware versions:
-+
-----
-14.0.539.16, sli-4:6:d
-14.0.539.16, sli-4:6:d
-----
-
-.. Display the inbox driver version:
-+
-[source,cli]
-----
-cat /sys/module/lpfc/version
-----
-+
-The following example shows a driver version:
-+
-----
-0:14.4.0.6
-----
-
-+
-For the current list of supported adapter driver and firmware versions, see the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^].
-
-. Verify that the expected output of `lpfc_enable_fc4_type` is set to `3`:
-+
-[source,cli]
-----
-cat /sys/module/lpfc/parameters/lpfc_enable_fc4_type
-----
-
-. Verify that you can view your initiator ports:
-+
-[source,cli]
-----
-cat /sys/class/fc_host/host*/port_name
-----
-+
-The following example shows port identities:
-+
----- 
-0x2100f4c7aa0cd7c2
-0x2100f4c7aa0cd7c3
-----
-
-. Verify that your initiator ports are online:
-+
-[source,cli]
-----
-cat /sys/class/fc_host/host*/port_state
-----
-+
-You should see the following output:
-+
-----
-Online
-Online
-----
-
-. Verify that the NVMe/FC initiator ports are enabled and that the target ports are visible:
-+
-[source,cli]
-----
-cat /sys/class/scsi_host/host*/nvme_info
-----
-+
-.Show example
-[%collapsible]
-====
-[subs=+quotes]
-----
-NVME Initiator Enabled
-XRI Dist lpfc2 Total 6144 IO 5894 ELS 250
-NVME LPORT lpfc2 WWPN x100000109bf044b1 WWNN x200000109bf044b1 DID x022a00 *ONLINE*
-NVME RPORT       WWPN x202fd039eaa7dfc8 WWNN x202cd039eaa7dfc8 DID x021310 *TARGET DISCSRVC ONLINE*
-NVME RPORT       WWPN x202dd039eaa7dfc8 WWNN x202cd039eaa7dfc8 DID x020b10 *TARGET DISCSRVC ONLINE*
-
-NVME Statistics
-LS: Xmt 0000000810 Cmpl 0000000810 Abort 00000000
-LS XMIT: Err 00000000  CMPL: xb 00000000 Err 00000000
-Total FCP Cmpl 000000007b098f07 Issue 000000007aee27c4 OutIO ffffffffffe498bd
-        abort 000013b4 noxri 00000000 nondlp 00000058 qdepth 00000000 wqerr 00000000 err 00000000
-FCP CMPL: xb 000013b4 Err 00021443
-
-NVME Initiator Enabled
-XRI Dist lpfc3 Total 6144 IO 5894 ELS 250
-NVME LPORT lpfc3 WWPN x100000109bf044b2 WWNN x200000109bf044b2 DID x021b00 *ONLINE*
-NVME RPORT       WWPN x2033d039eaa7dfc8 WWNN x202cd039eaa7dfc8 DID x020110 *TARGET DISCSRVC ONLINE*
-NVME RPORT       WWPN x2032d039eaa7dfc8 WWNN x202cd039eaa7dfc8 DID x022910 *TARGET DISCSRVC ONLINE*
-
-NVME Statistics
-LS: Xmt 0000000840 Cmpl 0000000840 Abort 00000000
-LS XMIT: Err 00000000  CMPL: xb 00000000 Err 00000000
-Total FCP Cmpl 000000007afd4434 Issue 000000007ae31b83 OutIO ffffffffffe5d74f
-        abort 000014a5 noxri 00000000 nondlp 0000006a qdepth 00000000 wqerr 00000000 err 00000000
-FCP CMPL: xb 000014a5 Err 0002149a
-----
-====
-
---
-
-.Marvell/QLogic
---
-
-Configure NVMe/FC for a Marvell/QLogic adapter.
-
-.Steps
-
-. Verify that you are running the supported adapter driver and firmware versions:
-+
-[source,cli]
-----
-cat /sys/class/fc_host/host*/symbolic_name
-----
-+
-The follow example shows driver and firmware versions:
-+
-----
-QLE2872 FW:v9.15.00 DVR:v10.02.09.300-k
-QLE2872 FW:v9.15.00 DVR:v10.02.09.300-k
-----
-
-. Verify that `ql2xnvmeenable` is set. This enables the Marvell adapter to function as an NVMe/FC initiator:
-+
-[source,cli]
-----
-cat /sys/module/qla2xxx/parameters/ql2xnvmeenable
-----
-+
-The expected ouptut is 1.
---
-=====
+include::_include/nvme/configure-nvmefc-version10-rockylinux-proxmox.adoc[]
 
 == Step 4: Optionally, enable 1MB I/O 
 
