ontapdoc-3124 step 8 nvme

--- a/nvme-proxmox-84.adoc
+++ b/nvme-proxmox-84.adoc
@@ -75,272 +75,19 @@ include::_include/nvme/verify-nvme-services.adoc[]
 
 include::_include/nvme/nvme-configure-nvme-tcp.adoc[]
 
-.Steps
-
-. Verify that the initiator port can fetch the discovery log page data across the supported NVMe/TCP LIFs:
-+
-[source,cli]
-----
-nvme discover -t tcp -w host-traddr -a traddr
-----
-+
-.Show example
-[%collapsible]
-=====
-[subs=+quotes]
-----
-nvme discover -t tcp -w 192.168.20.1 -a 192.168.20.20
-
-Discovery Log Number of Records 8, Generation counter 18
-=====Discovery Log Entry 0======
-trtype:  tcp
-adrfam:  ipv4
-subtype: *current discovery subsystem*
-treq:    not specified
-portid:  4
-trsvcid: 8009
-subnqn:  nqn.1992-08.com.netapp:sn.64e65e6caae711ef9668d039ea951c46:discovery
-traddr:  192.168.21.21
-eflags:  *explicit discovery connections, duplicate discovery information*
-sectype: none
-=====Discovery Log Entry 1======
-trtype:  tcp
-adrfam:  ipv4
-subtype: *current discovery subsystem*
-treq:    not specified
-portid:  2
-trsvcid: 8009
-subnqn:  nqn.1992-08.com.netapp:sn.64e65e6caae711ef9668d039ea951c46:discovery
-traddr:  192.168.20.21
-eflags:  *explicit discovery connections, duplicate discovery information*
-sectype: none
-=====Discovery Log Entry 2======
-trtype:  tcp
-adrfam:  ipv4
-subtype: *current discovery subsystem*
-treq:    not specified
-portid:  3
-trsvcid: 8009
-subnqn:  nqn.1992-08.com.netapp:sn.64e65e6caae711ef9668d039ea951c46:discovery
-traddr:  192.168.21.20
-eflags:  *explicit discovery connections, duplicate discovery information*
-sectype: none
-=====Discovery Log Entry 3======
-trtype:  tcp
-adrfam:  ipv4
-subtype: *current discovery subsystem*
-treq:    not specified
-portid:  1
-trsvcid: 8009
-subnqn:  nqn.1992-08.com.netapp:sn.64e65e6caae711ef9668d039ea951c46:discovery
-traddr:  192.168.20.20
-eflags:  *explicit discovery connections, duplicate discovery information*
-sectype: none
-=====Discovery Log Entry 4======
-trtype:  tcp
-adrfam:  ipv4
-subtype: *nvme subsystem*
-treq:    not specified
-portid:  4
-trsvcid: 4420
-subnqn:  nqn.1992-08.com.netapp:sn.64e65e6caae711ef9668d039ea951c46:subsystem.proxmox84_tcp_subsystem
-traddr:  192.168.21.21
-eflags:  none
-sectype: none
-=====Discovery Log Entry 5======
-trtype:  tcp
-adrfam:  ipv4
-subtype: *nvme subsystem*
-treq:    not specified
-portid:  2
-trsvcid: 4420
-subnqn:  nqn.1992-08.com.netapp:sn.64e65e6caae711ef9668d039ea951c46:subsystem.proxmox84_tcp_subsystem
-traddr:  192.168.20.21
-eflags:  none
-sectype: none
-=====Discovery Log Entry 6======
-trtype:  tcp
-adrfam:  ipv4
-subtype: *nvme subsystem*
-treq:    not specified
-portid:  3
-trsvcid: 4420
-subnqn:  nqn.1992-08.com.netapp:sn.64e65e6caae711ef9668d039ea951c46:subsystem.proxmox84_tcp_subsystem
-traddr:  192.168.21.20
-eflags:  none
-sectype: none
-=====Discovery Log Entry 7======
-trtype:  tcp
-adrfam:  ipv4
-subtype: *nvme subsystem*
-treq:    not specified
-portid:  1
-trsvcid: 4420
-subnqn:  nqn.1992-08.com.netapp:sn.64e65e6caae711ef9668d039ea951c46:subsystem.proxmox84_tcp_subsystem
-traddr:  192.168.20.20
-eflags:  none
-sectype: none
-----
-=====
-
-. Verify that the other NVMe/TCP initiator-target LIF combinations can successfully fetch discovery log page data: 
-+
-[source,cli]
-----
-nvme discover -t tcp -w host-traddr -a traddr
-----
-+
-.Show example
-[%collapsible]
-====
-[subs=+quotes]
-----
-nvme discover -t tcp -w 192.168.20.1 -a 192.168.20.20
-nvme discover -t tcp -w 192.168.21.1 -a 192.168.21.20
-nvme discover -t tcp -w 192.168.20.1 -a 192.168.20.21
-nvme discover -t tcp -w 192.168.21.1 -a 192.168.21.21
-----
-====
-
-. Run the `nvme connect-all` command across all the supported NVMe/TCP initiator-target LIFs across the nodes:
-+
-[source,cli]
-----
-nvme connect-all -t tcp -w host-traddr -a traddr
-----
-+
-.Show example
-[%collapsible]
-=====
-[subs=+quotes]
-----
-nvme	connect-all	-t	tcp	-w	192.168.20.1	-a	192.168.20.20
-nvme	connect-all	-t	tcp	-w	192.168.21.1	-a	192.168.21.20
-nvme	connect-all	-t	tcp	-w	192.168.20.1	-a	192.168.20.21
-nvme	connect-all	-t	tcp	-w	192.168.21.1	-a	192.168.21.21	
-----			
-=====
-
-[NOTE]
-====
-The setting for the NVMe/TCP `ctrl_loss_tmo timeout` is automatically set to "off". As a result:
-
-include::_include/nvme/ctrl-loss-tmo-default-off.adoc[]
-====
+include::_include/nvme/configure-nvme-tcp-steps-version10-rockylinux-proxmox.adoc[]
 
 == Step 7: Validate NVMe-oF
 
 include::_include/nvme/nvme-validate-nvme-of.adoc[]
 
-. Verify that the controller state of each path is live and has the correct ANA status:
-+
-[role="tabbed-block"]
-=====
-.NVMe/FC
---
-[source,cli]
-----
-nvme list-subsys /dev/nvme5n1
-----
+include::_include/nvme/validate-nvme-of-latersteps-version10-rockylinux-proxmox.adoc[]
 
-.Show example
-[%collapsible]
-====
-[subs=+quotes]
-----
-nvme-subsys5 - NQN=nqn.1992-08.com.netapp:sn.f7565b15a66911ef9668d039ea951c46:subsystem.nvme1
-               hostnqn=nqn.2014-08.org.nvmexpress:uuid:4c4c4544-0056-5410-8048-c7c04f425633
-\
- +- nvme126 *fc* traddr=nn-0x2036d039ea951c45:pn-0x2038d039ea951c45,host_traddr=nn-0x2000f4c7aa0cd7c3:pn-0x2100f4c7aa0cd7c3 *live optimized*
- +- nvme176 *fc* traddr=nn-0x2036d039ea951c45:pn-0x2037d039ea951c45,host_traddr=nn-0x2000f4c7aa0cd7c2:pn-0x2100f4c7aa0cd7c2 *live optimized*
- +- nvme5 *fc* traddr=nn-0x2036d039ea951c45:pn-0x2039d039ea951c45,host_traddr=nn-0x2000f4c7aa0cd7c2:pn-0x2100f4c7aa0cd7c2 *live non-optimized*
- +- nvme71 *fc* traddr=nn-0x2036d039ea951c45:pn-0x203ad039ea951c45,host_traddr=nn-0x2000f4c7aa0cd7c3:pn-0x2100f4c7aa0cd7c3 *live non-optimized*
-----
-====
---
-.NVMe/TCP
---
-[source,cli]
-----
-nvme list-subsys /dev/nvme4n2
-----
+== Step 8: Set up secure in-band authentication
 
-.Show example
-[%collapsible]
-====
-[subs=+quotes]
-----
-nvme-subsys4 - NQN=nqn.1992-08.com.netapp:sn.64e65e6caae711ef9668d039ea951c46:subsystem.nvme4
-               hostnqn=nqn.2014-08.org.nvmexpress:uuid:4c4c4544-0035-5910-804b-c2c04f444d33
-\
-+- nvme102 *tcp* traddr=192.168.21.20,trsvcid=4420,host_traddr=192.168.21.1,src_addr=192.168.21.1 *live non-optimized*
-+- nvme151 *tcp* traddr=192.168.21.21,trsvcid=4420,host_traddr=192.168.21.1,src_addr=192.168.21.1 *live optimized*
-+- nvme4 *tcp* traddr=192.168.20.20,trsvcid=4420,host_traddr=192.168.20.1,src_addr=192.168.20.1 *live non-optimized*
-+- nvme53 *tcp* traddr=192.168.20.21,trsvcid=4420,host_traddr=192.168.20.1,src_addr=192.168.20.1 *live optimized*
-----
-====
---
-=====
+include::_include/nvme/secure-inband-authentication-version10-rhel-proxmox.adoc[]
 
-. Verify that the NetApp plug-in displays the correct values for each ONTAP namespace device:
-+
-[role="tabbed-block"]
-=====
-.Column
---
-[source,cli]
-----
-nvme netapp ontapdevices -o column
-----
-
-.Show example
-[%collapsible]
-====
-[subs=+quotes]
-----
-
-Device            Vserver                   Namespace Path                                                          
------------------------ ------------------------------------
-/dev/nvme10n1     vs_tcp_proxmox84          /vol/vol10/ns10 
-              
-NSID       UUID                             Size
------------------------ ------------------------------------
-1    bbf51146-fc64-4197-b8cf-8a24f6f359b3   21.47GB                          
-----
-====
---
-.JSON
---
-[source,cli]
-----
-nvme netapp ontapdevices -o json
-----
-
-.Show example
-[%collapsible]
-====
-[subs=+quotes]
-----
-{
-  "ONTAPdevices":[
-    {
-      "Device":"/dev/nvme10n1",
-      "Vserver":"vs_tcp_proxmox84",
-      "Namespace_Path":"/vol/vol10/ns10",
-      "NSID":1,
-      "UUID":"bbf51146-fc64-4197-b8cf-8a24f6f359b3",
-      "Size":"21.47GB",
-      "LBA_Data_Size":4096,
-      "Namespace_Size":5242880
-}
-]
-    }
-----
-====
---
-=====
-
-== Step 8: Review the known issues
+== Step 9: Review the known issues
 
 There are no known issues.
 
